--- a/bower.json
+++ b/bower.json
@@ -16,8 +16,7 @@
     "animate.css": "~3.3.0",
     "angular": "~1.3.16",
     "angular-pan-zoom": "~1.0.9",
-    "lodash": "~3.10.0",
-    "flexisel": "~0.1.1"
+    "lodash": "~3.10.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.16"
