--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "dependencies": {},
   "scripts": {
+    "postinstall": "./node_modules/.bin/bower install",
     "test": "./node_modules/.bin/gulp test && ./node_modules/.bin/gulp protractor"
   },
   "devDependencies": {
+    "bower": "^1.4.1",
     "browser-sync": "~2.7.12",
     "browser-sync-spa": "~1.0.2",
     "chalk": "~1.0.0",
