--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - nohup bash -c "./node_modules/protractor/bin/webdriver-manager start 2>&1 &"
 cache:
   directories:
     - node_modules
