--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - nohup bash -c "./node_modules/protractor/bin/webdriver-manager start 2>&1 &"
+  - sleep 3 # give xvfb some time to start
+  - rackup  # start a Web server
+  - sleep 3 # give Web server some time to bind to sockets, etc
 cache:
   directories:
     - node_modules
