--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "karma-ng-html2js-preprocessor": "~0.1.2",
     "karma-phantomjs-launcher": "~0.2.0",
     "karma-safari-launcher": "^0.1.1",
+    "karma-sauce-launcher": "^0.2.14",
     "lodash": "~3.9.3",
     "main-bower-files": "~2.8.0",
     "merge-stream": "~0.1.7",
